# ecosystem-mcp-server

./: .gitignore  CLAUDE.md  README.md  com.ecosystem.notion-poller.plist  pyproject.toml
src/ecosystem_mcp_server/: __init__.py  daily_briefing.py  monarch_sync.py  notion_control.py  server.py
