[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ecosystem-mcp-server"
version = "0.1.0"
description = "MCP server for unified control of personal automation ecosystem"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "pqsoccerboy17"},
]
keywords = ["mcp", "automation", "ecosystem", "claude"]

dependencies = [
    "mcp>=1.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
ecosystem-mcp-server = "ecosystem_mcp_server.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/ecosystem_mcp_server"]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"]
ignore = ["E501"]
